# TIPE-Ray-Tracing

./: .~lock.restultat.ppm#  AABB.cpp  AABB.hpp  BVH_node.cpp  BVH_node.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Hittable.cpp  Hittable.hpp  Hittable_list.cpp  Hittable_list.hpp  Image.cpp  Image.hpp  Interval.cpp  Interval.hpp  Material.cpp  Material.hpp  Plan  Ray.cpp  Ray.hpp  Raytracer.hpp  Rectangle.cpp  Rectangle.hpp  Scenes.cpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp  Vec3.cpp  Vec3.hpp  cree_image.py  liens utiles  main.cpp  restultat.ppm  vec3.cpp  vec3.hpp
images/: im_rt.ppm  im_rt_512x512_cc=(0.,0.5,-2.)_cd=(0.,0.,1.)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=0._lambertianExample.ppm  im_rt_512x512_cc=(0.,0.5,-2.)_cd=(0.,0.,1.)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=10._LambertianExample.ppm  im_rt_512x512_cc=(0.,0.5,-2.)_cd=(0.,0.,1.)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=10._LightExample.ppm  im_rt_512x512_cc=(0.,0.5,-2.)_cd=(0.,0.,1.)_cup=(0.,1.,0.)_spm=500._md=10._vfov=60._da=0._fd=10._LightExample.ppm  im_rt_512x512_cc=(0.,0.7,-3.)_cd=(0.,-0.1,3.5)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=0._MetaExamplesByFuzz.ppm  im_rt_512x512_cc=(0.,0.7,-3.)_cd=(0.,-0.1,3.5)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=10._MetalExampleByFuzz(0.8-0.4-0.).ppm  im_rt_512x512_cc=(0.,0.7,-3.)_cd=(0.,0.1,3.5)_cup=(0.,1.,0.)_spm=100._md=10._vfov=60._da=0._fd=0._DielectricExamples(air_in_water-shield_of_glass).ppm  (+2 more)
python/: camera.py  rayon.py  teste.py  vect3.py
